modified:   css/style.css 	modified:   index.html 	modified:   js/main.js

--- a/index.html
+++ b/index.html
@@ -578,6 +578,45 @@
                 </div>
             </div>
         </section>
+        <div class="overlay">
+            <div class="container">
+                <div class="stories-overlay">
+                    <div class="container">
+                        <button class="stories-overlay__prev"></button>
+                        <div class="story">
+                            <div class="story-header">
+                                <ul class="story-paggination">
+                                    <li class="story-paggination__item selected">
+                                        <div class="story-paggination__progress" style="width: 20%"></div>
+                                    </li>
+                                    <li class="story-paggination__item">
+                                        <div class="story-paggination__progress" style="width: 0%"></div>
+                                    </li>
+                                    <li class="story-paggination__item">
+                                        <div class="story-paggination__progress" style="width: 0%"></div>
+                                    </li>
+                                </ul>
+                                <button class="stories-overlay__close"></button>
+                            </div>
+                            <div class="story-content">
+                                <ul class="story-content__list">
+                                    <li class="story-content__item current">
+                                        <img src="img/product-image.jpg" alt="">
+                                    </li>
+                                    <li class="story-content__item">
+                                        <img src="img/product-image.jpg" alt="">
+                                    </li>
+                                    <li class="story-content__item">
+                                        <img src="img/product-image.jpg" alt="">
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <button class="stories-overlay__next"></button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer class="footer">
         <div class="container">
