modified:   index.html

--- a/index.html
+++ b/index.html
@@ -592,13 +592,13 @@
                             <div class="story-content">
                                 <ul class="story-content__list">
                                     <li class="story-content__item current">
-                                        <video src="img/story_video.mp4"></video>
+                                        <video playsinline src="img/story_video.mp4"></video>
                                     </li>
                                     <li class="story-content__item">
-                                        <video src="img/story_video_2.mp4"></video>
+                                        <video playsinline src="img/story_video_2.mp4"></video>
                                     </li>
                                     <li class="story-content__item">
-                                        <video src="img/story_video.mp4"></video>
+                                        <video playsinline src="img/story_video.mp4"></video>
                                     </li>
                                 </ul>
                                 <div class="story-center">
@@ -670,13 +670,13 @@
                             <div class="story-content">
                                 <ul class="story-content__list">
                                     <li class="story-content__item">
-                                        <video src="img/story_video_2.mp4"></video>
+                                        <video playsinline src="img/story_video_2.mp4"></video>
                                     </li>
                                     <li class="story-content__item current">
-                                        <video src="img/story_video.mp4"></video>
+                                        <video playsinline src="img/story_video.mp4"></video>
                                     </li>
                                     <li class="story-content__item">
-                                        <video src="img/story_video.mp4"></video>
+                                        <video playsinline src="img/story_video.mp4"></video>
                                     </li>
                                 </ul>
                                 <div class="story-center">
