modified:   index.html

--- a/index.html
+++ b/index.html
@@ -681,8 +681,8 @@
                                 </ul>
                                 <div class="story-center">
                                     <a class="story-geolocation hidden" href="">Moscow</a>
-                                    <a class="story-link" href="">Link</a>
-                                    <div class="story-question hidden">
+                                    <a class="story-link hidden" href="">Link</a>
+                                    <div class="story-question">
                                         <div class="story-question__img">
                                             <img src="img/apartament-preview.jpg" alt="">
                                         </div>
