modified:   index.html

--- a/index.html
+++ b/index.html
@@ -98,6 +98,20 @@
                         </div>
                         <p class="stories-list__title">История</p>
                     </li>
+                    <li class="stories-list__item" data-story="3">
+                        <div class="stories-list__wrapper">
+                            <div class="stories-list__border"></div>
+                            <img class="stories-list__preview" src="img/apartament-preview.jpg" alt="">
+                        </div>
+                        <p class="stories-list__title">История</p>
+                    </li>
+                    <li class="stories-list__item" data-story="4">
+                        <div class="stories-list__wrapper">
+                            <div class="stories-list__border"></div>
+                            <img class="stories-list__preview" src="img/apartament-preview.jpg" alt="">
+                        </div>
+                        <p class="stories-list__title">История</p>
+                    </li>
                 </ul>
             </div>
         </section>
@@ -686,10 +700,166 @@
                                         <div class="story-question__img">
                                             <img src="img/apartament-preview.jpg" alt="">
                                         </div>
-                                        <div class="story-question__title">Ask me a questing</div>
+                                        <div class="story-question__title">Ask me a question</div>
                                         <input placeholder="Type something..." type="text">
                                     </div>
                                     <div class="story-quiz hidden">
+                                        <div class="story-quiz__header">
+                                            <div class="story-quiz__title">Question title</div>
+                                        </div>
+                                        <div class="story-quiz__content">
+                                            <ul class="quiz-list">
+                                                <li class="quiz-list__item">
+                                                    <div class="quiz-list__variant">A</div>
+                                                    <div class="quiz-list__text">Quiz variant</div>
+                                                </li>
+                                                <li class="quiz-list__item">
+                                                    <div class="quiz-list__variant">B</div>
+                                                    <div class="quiz-list__text">Quiz variant</div>
+                                                </li>
+                                                <li class="quiz-list__item selected">
+                                                    <div class="quiz-list__variant">C</div>
+                                                    <div class="quiz-list__text">Quiz variant</div>
+                                                </li>
+                                                <li class="quiz-list__item">
+                                                    <div class="quiz-list__variant">D</div>
+                                                    <div class="quiz-list__text">Quiz variant</div>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="story-footer">
+                                <input placeholder="Input text..." type="text">
+                            </div>
+                        </div>
+                        <div class="story" data-story="3">
+                            <div class="story-header">
+                                <ul class="story-paggination">
+                                    <li class="story-paggination__item current">
+                                        <div class="story-paggination__progress" style="width: 0%"></div>
+                                    </li>
+                                    <li class="story-paggination__item">
+                                        <div class="story-paggination__progress" style="width: 0%"></div>
+                                    </li>
+                                    <li class="story-paggination__item">
+                                        <div class="story-paggination__progress" style="width: 0%"></div>
+                                    </li>
+                                </ul>
+                                <div class="story-header__wrapper">
+                                    <div class="story-info">
+                                        <img class="story-info__icon" src="img/apartament-preview.jpg" alt="">
+                                        <div class="story-info__title">Имя</div>
+                                        <span class="story-info__date">23 ч.</span>
+                                    </div>
+                                    <div class="story-actions">
+                                        <button class="play-btn"></button>
+                                        <button class="mute-btn"></button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="story-content">
+                                <ul class="story-content__list">
+                                    <li class="story-content__item">
+                                        <video playsinline src="img/story_video_2.mp4"></video>
+                                    </li>
+                                    <li class="story-content__item current">
+                                        <video playsinline src="img/story_video.mp4"></video>
+                                    </li>
+                                    <li class="story-content__item">
+                                        <video playsinline src="img/story_video.mp4"></video>
+                                    </li>
+                                </ul>
+                                <div class="story-center">
+                                    <a class="story-geolocation" href="">Moscow</a>
+                                    <a class="story-link hidden" href="">Link</a>
+                                    <div class="story-question hidden">
+                                        <div class="story-question__img">
+                                            <img src="img/apartament-preview.jpg" alt="">
+                                        </div>
+                                        <div class="story-question__title">Ask me a question</div>
+                                        <input placeholder="Type something..." type="text">
+                                    </div>
+                                    <div class="story-quiz hidden">
+                                        <div class="story-quiz__header">
+                                            <div class="story-quiz__title">Question title</div>
+                                        </div>
+                                        <div class="story-quiz__content">
+                                            <ul class="quiz-list">
+                                                <li class="quiz-list__item">
+                                                    <div class="quiz-list__variant">A</div>
+                                                    <div class="quiz-list__text">Quiz variant</div>
+                                                </li>
+                                                <li class="quiz-list__item">
+                                                    <div class="quiz-list__variant">B</div>
+                                                    <div class="quiz-list__text">Quiz variant</div>
+                                                </li>
+                                                <li class="quiz-list__item selected">
+                                                    <div class="quiz-list__variant">C</div>
+                                                    <div class="quiz-list__text">Quiz variant</div>
+                                                </li>
+                                                <li class="quiz-list__item">
+                                                    <div class="quiz-list__variant">D</div>
+                                                    <div class="quiz-list__text">Quiz variant</div>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="story-footer">
+                                <input placeholder="Input text..." type="text">
+                            </div>
+                        </div>
+                        <div class="story" data-story="4">
+                            <div class="story-header">
+                                <ul class="story-paggination">
+                                    <li class="story-paggination__item current">
+                                        <div class="story-paggination__progress" style="width: 0%"></div>
+                                    </li>
+                                    <li class="story-paggination__item">
+                                        <div class="story-paggination__progress" style="width: 0%"></div>
+                                    </li>
+                                    <li class="story-paggination__item">
+                                        <div class="story-paggination__progress" style="width: 0%"></div>
+                                    </li>
+                                </ul>
+                                <div class="story-header__wrapper">
+                                    <div class="story-info">
+                                        <img class="story-info__icon" src="img/apartament-preview.jpg" alt="">
+                                        <div class="story-info__title">Имя</div>
+                                        <span class="story-info__date">23 ч.</span>
+                                    </div>
+                                    <div class="story-actions">
+                                        <button class="play-btn"></button>
+                                        <button class="mute-btn"></button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="story-content">
+                                <ul class="story-content__list">
+                                    <li class="story-content__item">
+                                        <video playsinline src="img/story_video_2.mp4"></video>
+                                    </li>
+                                    <li class="story-content__item current">
+                                        <video playsinline src="img/story_video.mp4"></video>
+                                    </li>
+                                    <li class="story-content__item">
+                                        <video playsinline src="img/story_video.mp4"></video>
+                                    </li>
+                                </ul>
+                                <div class="story-center">
+                                    <a class="story-geolocation hidden" href="">Moscow</a>
+                                    <a class="story-link hidden" href="">Link</a>
+                                    <div class="story-question hidden">
+                                        <div class="story-question__img">
+                                            <img src="img/apartament-preview.jpg" alt="">
+                                        </div>
+                                        <div class="story-question__title">Ask me a question</div>
+                                        <input placeholder="Type something..." type="text">
+                                    </div>
+                                    <div class="story-quiz">
                                         <div class="story-quiz__header">
                                             <div class="story-quiz__title">Question title</div>
                                         </div>
