modified:   index.html

--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
                         <div class="story" data-story="1">
                             <div class="story-header">
                                 <ul class="story-paggination">
-                                    <li class="story-paggination__item current">
+                                    <li class="story-paggination__item">
                                         <div class="story-paggination__progress" style="width: 0%"></div>
                                     </li>
                                     <li class="story-paggination__item">
@@ -605,7 +605,7 @@
                             </div>
                             <div class="story-content">
                                 <ul class="story-content__list">
-                                    <li class="story-content__item current">
+                                    <li class="story-content__item">
                                         <video playsinline src="img/story_video.mp4"></video>
                                     </li>
                                     <li class="story-content__item">
@@ -659,7 +659,7 @@
                         <div class="story" data-story="2">
                             <div class="story-header">
                                 <ul class="story-paggination">
-                                    <li class="story-paggination__item current">
+                                    <li class="story-paggination__item">
                                         <div class="story-paggination__progress" style="width: 0%"></div>
                                     </li>
                                     <li class="story-paggination__item">
@@ -686,7 +686,7 @@
                                     <li class="story-content__item">
                                         <video playsinline src="img/story_video_2.mp4"></video>
                                     </li>
-                                    <li class="story-content__item current">
+                                    <li class="story-content__item">
                                         <video playsinline src="img/story_video.mp4"></video>
                                     </li>
                                     <li class="story-content__item">
@@ -737,7 +737,7 @@
                         <div class="story" data-story="3">
                             <div class="story-header">
                                 <ul class="story-paggination">
-                                    <li class="story-paggination__item current">
+                                    <li class="story-paggination__item">
                                         <div class="story-paggination__progress" style="width: 0%"></div>
                                     </li>
                                     <li class="story-paggination__item">
@@ -764,7 +764,7 @@
                                     <li class="story-content__item">
                                         <video playsinline src="img/story_video_2.mp4"></video>
                                     </li>
-                                    <li class="story-content__item current">
+                                    <li class="story-content__item">
                                         <video playsinline src="img/story_video.mp4"></video>
                                     </li>
                                     <li class="story-content__item">
@@ -815,7 +815,7 @@
                         <div class="story" data-story="4">
                             <div class="story-header">
                                 <ul class="story-paggination">
-                                    <li class="story-paggination__item current">
+                                    <li class="story-paggination__item">
                                         <div class="story-paggination__progress" style="width: 0%"></div>
                                     </li>
                                     <li class="story-paggination__item">
@@ -842,7 +842,7 @@
                                     <li class="story-content__item">
                                         <video playsinline src="img/story_video_2.mp4"></video>
                                     </li>
-                                    <li class="story-content__item current">
+                                    <li class="story-content__item">
                                         <video playsinline src="img/story_video.mp4"></video>
                                     </li>
                                     <li class="story-content__item">
